Add img of mhairi circle

--- a/src/site/opening-ceremony.njk
+++ b/src/site/opening-ceremony.njk
@@ -61,6 +61,10 @@ metaDescription: 'Hear from the women who have transformed their lives, careers,
 
     <hr class="half-width-hr">
 
+    <div class="circle-img">
+        <img src="../static/img/Mhairi_pics/about-hero-square.jpg" alt="">
+    </div>
+
     <!-- testimonials section -->
     <section class="testimonials-section">
         <div class="testimonial-item">
