--- a/static/css/main.css
+++ b/static/css/main.css
@@ -12541,4 +12541,21 @@ input[type='checkbox'] {
 .ceremony-what-item:nth-of-type(1) {
   margin: 1em 0 3em 0;
 }
+
+.circle-img {
+  height: auto;
+  width: 21em;
+  margin: 4em auto;
+}
+
+@media only screen and (min-width: 992px) {
+  .circle-img {
+    width: 18em;
+  }
+}
+
+.circle-img img {
+  width: 100%;
+  border-radius: 100%;
+}
 /*# sourceMappingURL=main.css.map */
