--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -23,7 +23,8 @@
 @import
   'layout/header',
   'layout/footer',
-  'layout/gift_card';
+  'layout/gift_card',
+  'layout/sections';
 
 // 5. Components
 @import
