--- a/src/site/opening-ceremony.njk
+++ b/src/site/opening-ceremony.njk
@@ -65,6 +65,27 @@ metaDescription: 'Hear from the women who have transformed their lives, careers,
         <img src="../static/img/Mhairi_pics/about-hero-square.jpg" alt="">
     </div>
 
+    <section class="simple-section bg-gray">
+        <h2 class="sect-title">
+            Get quiet, get focused and get clear.
+        </h2>
+        <div class="simple-section-text">
+            <p class="normal-text">
+                You know the way it goes. The New Year begins and by some incredible alchemy all your troubles are left
+                behind and you immediately know how to move forward to get all you want in life…..oh no wait, that’s not right!
+                Truth is, if we do what we’ve always done we will get what we have always got.
+                So let’s create our own magic shall we babes?
+            </p>
+            <p class="normal-text">
+                I’ve created this workshop as a way to disrupt the energy of 2020; leave behind what isn’t useful, restore what is 
+                missing or lost and get super clear on what you want (what you really, really want).
+            </p>
+        </div>
+        <div class="about-cta-btn">
+            <a href="" class="btn-pink normal-text">Get your ticket</a>
+        </div>
+    </section>
+
     <!-- testimonials section -->
     <section class="testimonials-section">
         <div class="testimonial-item">
