Add workshop includes section

--- a/src/site/opening-ceremony.njk
+++ b/src/site/opening-ceremony.njk
@@ -65,6 +65,7 @@ metaDescription: 'Hear from the women who have transformed their lives, careers,
         <img src="../static/img/Mhairi_pics/about-hero-square.jpg" alt="">
     </div>
 
+    <!-- get quiet section -->
     <section class="simple-section bg-gray">
         <h2 class="sect-title">
             Get quiet, get focused and get clear.
@@ -85,6 +86,43 @@ metaDescription: 'Hear from the women who have transformed their lives, careers,
             <a href="" class="btn-pink normal-text">Get your ticket</a>
         </div>
     </section>
+    <!-- END: get quiet section -->
+
+    <!-- workshop includes section -->
+    <section class="why-mhairi">
+        <div class="why-mhairi-content workshop-includes-content">
+            <div class="home-about-img">
+                <img src="../static/img/Mhairi_pics/sitting_yellow_coat_comp.jpg" alt="mhairi-life-coach-yellow-coat">
+            </div>
+            <div class="why-mhairi-title">
+                <h3 class="home-about-subtitle fw-b">
+                    In this workshop we will honour our experiences of 2020 and leap forward with new energy into what we will manifest in 2021 
+                </h3>
+            </div>
+            <div class="home-about-text">
+                <ul class="workshop-includes-list normal-text">
+                    <li class="workshop-includes-item">
+                        We start with a short breathing technique to ground us in.
+                    </li>
+                    <li class="workshop-includes-item">
+                        I’ll then lead you through 3 exercises designed to clear your path and help you take the first right step towards what you want to build in 2021.
+                    </li>
+                    <li class="workshop-includes-item">
+                        You won’t have to speak babes or even turn your camera on if you do not wish (phew), but the interactive chat button will be enabled so we can chat away as we go about what comes up.
+                    </li>
+                    <li class="workshop-includes-item">
+                        With actions in hand we will close the event with a healing sound bath led by a wonderful Naad Yoga instructor (and beautiful friend of mine) Gemma.
+                        Never had a sound bath before? No problem!  All you need to do is lie back, relax and listen.  The sound will do the rest.
+                    </li>
+                </ul>
+            </div>
+            <div class="about-cta-btn">
+                <a href="/about" class="btn-pink normal-text">Get your ticket</a>
+            </div>
+        </div>
+    </section>
+    <!-- END: workshop includes section -->
+
 
     <!-- testimonials section -->
     <section class="testimonials-section">
