Add workshop includes section

--- a/src/site/opening-ceremony.njk
+++ b/src/site/opening-ceremony.njk
@@ -89,30 +89,34 @@ metaDescription: 'Hear from the women who have transformed their lives, careers,
     <!-- END: get quiet section -->
 
     <!-- workshop includes section -->
-    <section class="why-mhairi">
+    <section class="why-mhairi worksop-includes">
         <div class="why-mhairi-content workshop-includes-content">
             <div class="home-about-img">
                 <img src="../static/img/Mhairi_pics/sitting_yellow_coat_comp.jpg" alt="mhairi-life-coach-yellow-coat">
             </div>
-            <div class="why-mhairi-title">
+            <div class="why-mhairi-title pl-md-0">
                 <h3 class="home-about-subtitle fw-b">
                     In this workshop we will honour our experiences of 2020 and leap forward with new energy into what we will manifest in 2021 
                 </h3>
             </div>
-            <div class="home-about-text">
+            <div class="home-about-text pl-md-0">
                 <ul class="workshop-includes-list normal-text">
                     <li class="workshop-includes-item">
-                        We start with a short breathing technique to ground us in.
+                        <i class="far fa-check-circle"></i>
+                        <span class="workshop-includes-item-text">We start with a short breathing technique to ground us in.</span>
                     </li>
                     <li class="workshop-includes-item">
-                        I’ll then lead you through 3 exercises designed to clear your path and help you take the first right step towards what you want to build in 2021.
+                        <i class="far fa-check-circle"></i>
+                        <span class="workshop-includes-item-text">I’ll then lead you through 3 exercises designed to clear your path and help you take the first right step towards what you want to build in 2021.</span>
                     </li>
                     <li class="workshop-includes-item">
-                        You won’t have to speak babes or even turn your camera on if you do not wish (phew), but the interactive chat button will be enabled so we can chat away as we go about what comes up.
+                        <i class="far fa-check-circle"></i>
+                        <span class="workshop-includes-item-text">You won’t have to speak babes or even turn your camera on if you do not wish (phew), but the interactive chat button will be enabled so we can chat away as we go about what comes up.</span>
                     </li>
                     <li class="workshop-includes-item">
-                        With actions in hand we will close the event with a healing sound bath led by a wonderful Naad Yoga instructor (and beautiful friend of mine) Gemma.
-                        Never had a sound bath before? No problem!  All you need to do is lie back, relax and listen.  The sound will do the rest.
+                        <i class="far fa-check-circle"></i>
+                        <span class="workshop-includes-item-text">With actions in hand we will close the event with a healing sound bath led by a wonderful Naad Yoga instructor (and beautiful friend of mine) Gemma.
+                        Never had a sound bath before? No problem!  All you need to do is lie back, relax and listen.  The sound will do the rest.</span>
                     </li>
                 </ul>
             </div>
