Add divs for timer

--- a/src/site/opening-ceremony.njk
+++ b/src/site/opening-ceremony.njk
@@ -127,6 +127,52 @@ metaDescription: 'Hear from the women who have transformed their lives, careers,
     </section>
     <!-- END: workshop includes section -->
 
+    <!-- get quiet section -->
+    <section class="simple-section bg-aqua">
+        <h2 class="sect-title">
+            JOIN ME FOR 2021 OPENING WORKSHOP 
+        </h2>
+        <div class="simple-section-text">
+            <div class="timer-container">
+                <div class="timer-digit-container">
+                    <div id="timer-days" class="timer-digit">
+
+                    </div>
+                    <p class="sect-subtitle">
+                        Days
+                    </p>
+                </div>
+                <div class="timer-digit-container">
+                    <div id="timer-days" class="timer-digit">
+
+                    </div>
+                    <p class="sect-subtitle">
+                        Hours
+                    </p>
+                </div>
+                <div class="timer-digit-container">
+                    <div id="timer-days" class="timer-digit">
+
+                    </div>
+                    <p class="sect-subtitle">
+                        Minutes
+                    </p>
+                </div>
+                <div class="timer-digit-container">
+                    <div id="timer-days" class="timer-digit">
+
+                    </div>
+                    <p class="sect-subtitle">
+                        Seconds
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="about-cta-btn">
+            <a href="" class="btn-pink normal-text">Get your ticket</a>
+        </div>
+    </section>
+    <!-- END: get quiet section -->
 
     <!-- testimonials section -->
     <section class="testimonials-section">
