Add js countdown timer

--- a/src/site/opening-ceremony.njk
+++ b/src/site/opening-ceremony.njk
@@ -143,7 +143,7 @@ metaDescription: 'Hear from the women who have transformed their lives, careers,
                     </p>
                 </div>
                 <div class="timer-digit-container">
-                    <div id="timer-days" class="timer-digit">
+                    <div id="timer-hours" class="timer-digit">
 
                     </div>
                     <p class="sect-subtitle">
@@ -151,7 +151,7 @@ metaDescription: 'Hear from the women who have transformed their lives, careers,
                     </p>
                 </div>
                 <div class="timer-digit-container">
-                    <div id="timer-days" class="timer-digit">
+                    <div id="timer-minutes" class="timer-digit">
 
                     </div>
                     <p class="sect-subtitle">
@@ -159,7 +159,7 @@ metaDescription: 'Hear from the women who have transformed their lives, careers,
                     </p>
                 </div>
                 <div class="timer-digit-container">
-                    <div id="timer-days" class="timer-digit">
+                    <div id="timer-seconds" class="timer-digit">
 
                     </div>
                     <p class="sect-subtitle">
