Add timer styles

--- a/src/site/opening-ceremony.njk
+++ b/src/site/opening-ceremony.njk
@@ -135,35 +135,43 @@ metaDescription: 'Hear from the women who have transformed their lives, careers,
         <div class="simple-section-text">
             <div class="timer-container">
                 <div class="timer-digit-container">
-                    <div id="timer-days" class="timer-digit">
+                    <div class="timer-digit rob-font">
+                        <p id="timer-days" class="timer-text">
 
+                        </p>
                     </div>
                     <p class="sect-subtitle">
                         Days
                     </p>
                 </div>
                 <div class="timer-digit-container">
-                    <div id="timer-hours" class="timer-digit">
+                    <div class="timer-digit">
+                        <p id="timer-hours" class="timer-text">
 
+                        </p>
                     </div>
                     <p class="sect-subtitle">
                         Hours
                     </p>
                 </div>
                 <div class="timer-digit-container">
-                    <div id="timer-minutes" class="timer-digit">
+                    <div class="timer-digit">
+                        <p id="timer-minutes" class="timer-text">
 
+                        </p>
                     </div>
                     <p class="sect-subtitle">
-                        Minutes
+                        Mins
                     </p>
                 </div>
                 <div class="timer-digit-container">
-                    <div id="timer-seconds" class="timer-digit">
+                    <div class="timer-digit">
+                        <p id="timer-seconds" class="timer-text">
 
+                        </p>
                     </div>
                     <p class="sect-subtitle">
-                        Seconds
+                        Secs
                     </p>
                 </div>
             </div>
