Add leave with sect

--- a/src/site/opening-ceremony.njk
+++ b/src/site/opening-ceremony.njk
@@ -127,7 +127,7 @@ metaDescription: 'Hear from the women who have transformed their lives, careers,
     </section>
     <!-- END: workshop includes section -->
 
-    <!-- get quiet section -->
+    <!-- countdown timer section -->
     <section class="simple-section bg-aqua">
         <h2 class="sect-title">
             JOIN ME FOR 2021 OPENING WORKSHOP 
@@ -180,117 +180,39 @@ metaDescription: 'Hear from the women who have transformed their lives, careers,
             <a href="" class="btn-pink normal-text">Get your ticket</a>
         </div>
     </section>
-    <!-- END: get quiet section -->
+    <!-- END: countdown timer section -->
 
-    <!-- testimonials section -->
-    <section class="testimonials-section">
-        <div class="testimonial-item">
-            <div class="testimonial-author">
-                <h2 class="logo-font testimonial-author-name">
-                    Natalia McHale
-                </h2>
-                <h3 class="rob-font testimonial-author-job">
-                    E-Commerce Consultant 
-                </h3>
-            </div>
-            <div class="testimonial-exert">
-                <p>
-                    “Revolutionary. Motivating. Empowering. Mhairi is absolutely life-changing.”
-                </p>
-            </div>
-            <div class="testimonial-main">
-                <p class="normal-text">
-                    Words can’t quite describe how happy I am. After a few sessions, my nearest and dearest saw an almost physical change in me, radiating more positivity and embracing challenges. I’ve felt myself become a stronger and more assured person, feeling more confident in my choices and behaviour.
-                </p>
-            </div>
-        </div>
-        <hr class="half-width-hr">
-        <div class="testimonial-item">
-            <div class="testimonial-author">
-                <h2 class="logo-font testimonial-author-name">
-                    Kate Towse
-                </h2>
-                <h3 class="rob-font testimonial-author-job">
-                    Customer Experience Team Lead
-                </h3>
-            </div>
-            <div class="testimonial-exert">
-                <p>
-                    “Mhairi really helped me gain more confidence. If I ever feel overwhelmed, I just go back to my sessions with her”
-                </p>
-            </div>
-            <div class="testimonial-main">
-                <p class="normal-text">
-                    I had never had coaching sessions before so it was completely new to me. Mhairi was a great coach and made my first experience really enjoyable and interesting. Mhairi really helped me gain more confidence in my work environment. I struggled with prioritising and Mhairi coached me in ways I could do this that suited my personality type. I loved how she asked questions that enabled me to come up with solutions myself. She’s definitely helped me manage my workload and change the way I approach things. If I ever feel overwhelmed, I just go back to my sessions with Mhairi and remember what I’ve learnt.
-                </p>
-            </div>
-        </div>
-        <hr class="half-width-hr">
-        <div class="testimonial-item">
-            <div class="testimonial-author">
-                <h2 class="logo-font testimonial-author-name">
-                    Jo Christie
-                </h2>
-                <h3 class="rob-font testimonial-author-job">
-                    Travel Retail Manager U.K. and Ireland 
-                </h3>
-            </div>
-            <div class="testimonial-exert">
-                <p>
-                    “Mhairi was hugely inspirational and made me realise I can do anything I set my mind to”
-                </p>
-            </div>
-            <div class="testimonial-main">
-                <p class="normal-text">
-                    Mhairi has helped me think very differently and realise there are ways around obstacles. Before working with Mhairi, I was constantly telling myself I couldn’t do things. I was so busy being busy. I decided to give up smoking and although I had a few mishaps I’m quite proud of my 41 days smoke free. Mhairi was hugely inspirational and made me realise I can do anything I set my mind on.
-                </p>
-            </div>
-        </div>
-        <hr class="half-width-hr">
-        <div class="testimonial-item">
-            <div class="testimonial-author">
-                <h2 class="logo-font testimonial-author-name">
-                    Darren Searle
-                </h2>
-                <h3 class="rob-font testimonial-author-job">
-                    Store Manager 
-                </h3>
-            </div>
-            <div class="testimonial-exert">
-                <p>
-                    “The experience of having a coach...made me a more confident and happy person. Amazing! ”
-                </p>
-            </div>
-            <div class="testimonial-main">
-                <p class="normal-text">
-                    The experience of having a coach really made me reflect on the positive aspects of my life and not the negative. It gave me goals and made me look at things in such a different light, which in turn made me a more confident and happy person. This has continued even after the coaching sessions ended. Amazing!
-                </p>
-            </div>
-        </div>
-        <hr class="half-width-hr">
-        <div class="testimonial-item">
-            <div class="testimonial-author">
-                <h2 class="logo-font testimonial-author-name">
-                    Katya Van Brick
-                </h2>
-                <h3 class="rob-font testimonial-author-job">
-                    Content and Experience Specialist 
-                </h3>
-            </div>
-            <div class="testimonial-exert">
-                <p>
-                    “I have gone from not knowing how I could progress in my career, to having a clear vision and direction. ”
-                </p>
-            </div>
-            <div class="testimonial-main">
-                <p class="normal-text">
-                    Mhairi encouraged me to ask myself questions that I wouldn’t have otherwise considered. She gave me a new perspective on what I am capable of, which I now use in my day-to-day work life to achieve my goals. I have gone from not knowing how I could progress in my career, to having a clear vision and direction of how to get there.
-                </p>
-            </div>
+    <!-- what you'll leave with section -->
+    <section class="simple-section">
+        <h2 class="sect-title pink-text">
+            Leave this workshop with: 
+        </h2>
+        <div class="simple-section-text leave-with-list">
+            <ul class="workshop-includes-list normal-text">
+                <li class="workshop-includes-item">
+                    <i class="far fa-check-circle"></i>
+                    <span class="workshop-includes-item-text">A more reflective appreciation of your experience in 2020</span>
+                </li>
+                <li class="workshop-includes-item">
+                    <i class="far fa-check-circle"></i>
+                    <span class="workshop-includes-item-text">A calmer state of mind</span>
+                </li>
+                <li class="workshop-includes-item">
+                    <i class="far fa-check-circle"></i>
+                    <span class="workshop-includes-item-text">Practical tools</span>
+                </li>
+                <li class="workshop-includes-item">
+                    <i class="far fa-check-circle"></i>
+                    <span class="workshop-includes-item-text">A useful planning reference to help you stay clear and connected with your 2021 goals</span>
+                </li>
+                <li class="workshop-includes-item">
+                    <i class="far fa-check-circle"></i>
+                    <span class="workshop-includes-item-text">A beautiful sound healing experience</span>
+                </li>
+            </ul>
         </div>
     </section>
-    <!-- END: testimonials section -->
+    <!-- END: what you'll leave with section -->
 
-    {% include 'components/_services-parralax.njk' %}
     
     
