--- a/static/css/main.css
+++ b/static/css/main.css
@@ -12763,4 +12763,28 @@ input[type='checkbox'] {
     font-size: 1.8em;
   }
 }
+
+@media only screen and (max-width: 500px) {
+  .leave-with-list {
+    width: 80vw;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .leave-with-list {
+    width: 27em;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .leave-with-list {
+    width: 26em;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .leave-with-list {
+    width: 24em;
+  }
+}
 /*# sourceMappingURL=main.css.map */
