Add about mhairi to ceremony

--- a/src/site/opening-ceremony.njk
+++ b/src/site/opening-ceremony.njk
@@ -183,7 +183,7 @@ metaDescription: 'Hear from the women who have transformed their lives, careers,
     <!-- END: countdown timer section -->
 
     <!-- what you'll leave with section -->
-    <section class="simple-section">
+    <section class="simple-section leave-with-sect">
         <h2 class="sect-title pink-text">
             Leave this workshop with: 
         </h2>
@@ -214,5 +214,36 @@ metaDescription: 'Hear from the women who have transformed their lives, careers,
     </section>
     <!-- END: what you'll leave with section -->
 
-    
-    
+    <hr class="half-width-hr mt-0">
+
+    <!--Brief about section -->
+    <section class="home-about brief-about-ceremony">
+        <div class="home-about-title">
+            <h1 class="logo-2">Meet Mhairi</h1>
+            <h2 class="fw-b home-about-subtitle">
+                THE TRANSFORMATION COACH FOR WOMEN WHO WANT A LIFE WITHOUT LIMITS
+            </h2>
+        </div>
+        <div class="home-about-img">
+            <img src="../static/img/Mhairi_pics/walking-away.jpg" alt="mhairi-life-coach-walking-away">
+        </div>
+        <div class="home-about-text">
+            <p class="normal-text">
+                Mhairi, The Roadblock Coach, has helped many women navigate and overcome the roadblocks in their lives. 
+            </p>
+            <p class="normal-text">
+                From unlocking potential and gaining confidence to improving relationships and combating anxiety, her coaching programs help break down barriers standing between you and your personal version of true fulfillment.
+            </p>
+            <p class="normal-text">
+                The road to happiness exists, sometimes you just need a little help navigating it.
+            </p>
+        </div>
+    </section>
+    <!-- END: Brief about section -->
+
+    <section class="stand-alone-cta-btn">
+        <div class="about-cta-btn max-content-width">
+            <a href="" class="btn-pink normal-text">JOIN ME FOR 2021 OPENING WORKSHOP </a>
+        </div>
+    </section>
+
